[package]
name = "shyper-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shyper = { git = "https://github.com/tsemo4917/libshyper" }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
libc = "0.2.154"
log = "0.4.21"
nix = { version = "0.29.0", features = ["signal", "fs", "uio", "feature", "ioctl"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = "0.3.17"
